@@ -31,9 +31,13 @@ extern const int MEMPOOL_UNTRACKED;
 void mempool_init( void );
 int mempool_register_pool( void );
 void* mempool_malloc( int pool, size_t size );
+void* mempool_malloc_n( int pool, size_t nmemb, size_t size );
 char* mempool_strdup( int pool, const char *string );
 void mempool_free( int pool );
 void mempool_end( void );
+
+#define mempool_new( pool, type, count ) \
+  ( ( type * ) mempool_malloc_n( (pool), (count), sizeof( type ) ) )
 
 /* Unit test helper routines */
 
